// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell should render CellDisplay given the type Display 1`] = `
<TouchableOpacity
  avatarProps={
    {
      "accountAddress": "0x2990079bcdEe240329a520d2444386FC119da21a",
      "type": "JazzIcon",
      "variant": "Account",
    }
  }
  secondaryText="0x2990079bcdEe240329a520d2444386FC119da21a"
  style={
    {
      "backgroundColor": "#ffffff",
      "borderColor": "#bbc0c5",
      "borderRadius": 4,
      "borderWidth": 1,
      "padding": 16,
    }
  }
  tagLabel="Imported"
  tertiaryText="Updated 1 sec ago"
  testID="celldisplay"
  title="Orangefox.eth"
>
  <View
    accessibilityRole="none"
    accessible={true}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 0,
      }
    }
  >
    <View
      style={
        {
          "flex": -1,
        }
      }
      testID="listitemcolumn"
    >
      <View
        style={
          {
            "backgroundColor": "#ffffff",
            "borderRadius": 16,
            "height": 32,
            "overflow": "hidden",
            "width": 32,
          }
        }
        testID="cellbase-avatar"
      >
        <View
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "backgroundColor": "#03415D",
                "borderRadius": 16,
                "height": 32,
                "width": 32,
              },
              undefined,
            ]
          }
        >
          <RNSVGSvgView
            bbHeight={32}
            bbWidth={32}
            focusable={false}
            height={32}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 32,
                  "width": 32,
                },
              ]
            }
            width={32}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGRect
                fill={
                  {
                    "payload": 4294034178,
                    "type": 0,
                  }
                }
                height={32}
                matrix={
                  [
                    0.969445349895139,
                    0.24530738587880202,
                    -0.24530738587880202,
                    0.969445349895139,
                    5.859157984305513,
                    -4.030755338091121,
                  ]
                }
                propList={
                  [
                    "fill",
                  ]
                }
                width={32}
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={
                  {
                    "payload": 4294711613,
                    "type": 0,
                  }
                }
                height={32}
                matrix={
                  [
                    0.6320293026648508,
                    -0.7749444887041796,
                    0.7749444887041796,
                    0.6320293026648508,
                    -13.273357615151873,
                    5.849890884095565,
                  ]
                }
                propList={
                  [
                    "fill",
                  ]
                }
                width={32}
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={
                  {
                    "payload": 4294745088,
                    "type": 0,
                  }
                }
                height={32}
                matrix={
                  [
                    0.33873792024529126,
                    0.9408807689542256,
                    -0.9408807689542256,
                    0.33873792024529126,
                    50.8847515111068,
                    5.120153954341607,
                  ]
                }
                propList={
                  [
                    "fill",
                  ]
                }
                width={32}
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
    <View
      accessible={false}
      style={
        {
          "width": 16,
        }
      }
      testID="listitem-gap"
    />
    <View
      style={
        {
          "flex": 1,
        }
      }
      testID="listitemcolumn"
    >
      <Text
        accessibilityRole="text"
        numberOfLines={1}
        style={
          {
            "color": "#141618",
            "fontFamily": "Euclid Circular B",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
        testID="cellbase-avatar-title"
      >
        Orangefox.eth
      </Text>
      <Text
        accessibilityRole="text"
        numberOfLines={1}
        style={
          {
            "color": "#6a737d",
            "fontFamily": "Euclid Circular B",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
      >
        0x2990079bcdEe240329a520d2444386FC119da21a
      </Text>
      <Text
        accessibilityRole="text"
        numberOfLines={1}
        style={
          {
            "color": "#6a737d",
            "fontFamily": "Euclid Circular B",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
      >
        Updated 1 sec ago
      </Text>
      <View
        style={
          {
            "alignSelf": "flex-start",
            "backgroundColor": "#ffffff",
            "borderColor": "#bbc0c5",
            "borderRadius": 10,
            "borderWidth": 1,
            "height": 24,
            "justifyContent": "center",
            "marginTop": 4,
            "paddingHorizontal": 4,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#141618",
              "fontFamily": "Euclid Circular B",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          Imported
        </Text>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`Cell should render CellMultiSelect given the type MultiSelect 1`] = `
<TouchableOpacity
  disabled={false}
  style={
    {
      "alignItems": "flex-start",
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "opacity": 1,
      "padding": 16,
    }
  }
  testID="cellmultiselect"
>
  <View
    accessibilityRole="none"
    accessible={true}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 0,
      }
    }
  >
    <TouchableOpacity
      disabled={false}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 24,
          "marginRight": -8,
          "opacity": 1,
        }
      }
    >
      <View
        accessibilityRole="checkbox"
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#141618",
            "borderRadius": 4,
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          }
        }
      />
    </TouchableOpacity>
    <View
      accessible={false}
      style={
        {
          "width": 16,
        }
      }
      testID="listitem-gap"
    />
    <View
      accessibilityRole="none"
      accessible={true}
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "padding": 0,
        }
      }
    >
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      >
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 16,
              "height": 32,
              "overflow": "hidden",
              "width": 32,
            }
          }
          testID="cellbase-avatar"
        >
          <View
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "backgroundColor": "#F1D702",
                  "borderRadius": 16,
                  "height": 32,
                  "width": 32,
                },
                undefined,
              ]
            }
          >
            <RNSVGSvgView
              bbHeight={32}
              bbWidth={32}
              focusable={false}
              height={32}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 32,
                    "width": 32,
                  },
                ]
              }
              width={32}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGRect
                  fill={
                    {
                      "payload": 4278401629,
                      "type": 0,
                    }
                  }
                  height={32}
                  matrix={
                    [
                      0.9865721616069695,
                      0.16332596224162158,
                      -0.16332596224162158,
                      0.9865721616069695,
                      4.46613167496758,
                      -5.783427567500757,
                    ]
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width={32}
                  x={0}
                  y={0}
                />
                <RNSVGRect
                  fill={
                    {
                      "payload": 4293653248,
                      "type": 0,
                    }
                  }
                  height={32}
                  matrix={
                    [
                      -0.9510565162951535,
                      0.3090169943749475,
                      -0.3090169943749475,
                      -0.9510565162951535,
                      56.99785298993899,
                      28.83420484922151,
                    ]
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width={32}
                  x={0}
                  y={0}
                />
                <RNSVGRect
                  fill={
                    {
                      "payload": 4291236897,
                      "type": 0,
                    }
                  }
                  height={32}
                  matrix={
                    [
                      -0.9438009515832294,
                      0.3305143927132231,
                      -0.3305143927132231,
                      -0.9438009515832294,
                      58.82830600098727,
                      40.20612936020905,
                    ]
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width={32}
                  x={0}
                  y={0}
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
        testID="listitemcolumn"
      >
        <Text
          accessibilityRole="text"
          numberOfLines={1}
          style={
            {
              "color": "#141618",
              "fontFamily": "Euclid Circular B",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
          testID="cellbase-avatar-title"
        >
          Orangefox.eth
        </Text>
        <Text
          accessibilityRole="text"
          numberOfLines={1}
          style={
            {
              "color": "#6a737d",
              "fontFamily": "Euclid Circular B",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          0x2990079bcdEe240329a520d2444386FC119da21a
        </Text>
        <Text
          accessibilityRole="text"
          numberOfLines={1}
          style={
            {
              "color": "#6a737d",
              "fontFamily": "Euclid Circular B",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          Updated 1 sec ago
        </Text>
        <View
          style={
            {
              "alignSelf": "flex-start",
              "backgroundColor": "#ffffff",
              "borderColor": "#bbc0c5",
              "borderRadius": 10,
              "borderWidth": 1,
              "height": 24,
              "justifyContent": "center",
              "marginTop": 4,
              "paddingHorizontal": 4,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#141618",
                "fontFamily": "Euclid Circular B",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            Imported
          </Text>
        </View>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`Cell should render CellSelect given the type Select 1`] = `
<TouchableOpacity
  disabled={false}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "opacity": 1,
      "padding": 16,
      "position": "relative",
    }
  }
  testID="cellselect"
>
  <View
    accessibilityRole="none"
    accessible={true}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 0,
      }
    }
  >
    <View
      accessibilityRole="none"
      accessible={true}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "padding": 0,
        }
      }
    >
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      >
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 16,
              "height": 32,
              "overflow": "hidden",
              "width": 32,
            }
          }
          testID="cellbase-avatar"
        >
          <View
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "backgroundColor": "#F1D702",
                  "borderRadius": 16,
                  "height": 32,
                  "width": 32,
                },
                undefined,
              ]
            }
          >
            <RNSVGSvgView
              bbHeight={32}
              bbWidth={32}
              focusable={false}
              height={32}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 32,
                    "width": 32,
                  },
                ]
              }
              width={32}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGRect
                  fill={
                    {
                      "payload": 4278401629,
                      "type": 0,
                    }
                  }
                  height={32}
                  matrix={
                    [
                      0.9865721616069695,
                      0.16332596224162158,
                      -0.16332596224162158,
                      0.9865721616069695,
                      4.46613167496758,
                      -5.783427567500757,
                    ]
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width={32}
                  x={0}
                  y={0}
                />
                <RNSVGRect
                  fill={
                    {
                      "payload": 4293653248,
                      "type": 0,
                    }
                  }
                  height={32}
                  matrix={
                    [
                      -0.9510565162951535,
                      0.3090169943749475,
                      -0.3090169943749475,
                      -0.9510565162951535,
                      56.99785298993899,
                      28.83420484922151,
                    ]
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width={32}
                  x={0}
                  y={0}
                />
                <RNSVGRect
                  fill={
                    {
                      "payload": 4291236897,
                      "type": 0,
                    }
                  }
                  height={32}
                  matrix={
                    [
                      -0.9438009515832294,
                      0.3305143927132231,
                      -0.3305143927132231,
                      -0.9438009515832294,
                      58.82830600098727,
                      40.20612936020905,
                    ]
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width={32}
                  x={0}
                  y={0}
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
        testID="listitemcolumn"
      >
        <Text
          accessibilityRole="text"
          numberOfLines={1}
          style={
            {
              "color": "#141618",
              "fontFamily": "Euclid Circular B",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
          testID="cellbase-avatar-title"
        >
          Orangefox.eth
        </Text>
        <Text
          accessibilityRole="text"
          numberOfLines={1}
          style={
            {
              "color": "#6a737d",
              "fontFamily": "Euclid Circular B",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          0x2990079bcdEe240329a520d2444386FC119da21a
        </Text>
        <Text
          accessibilityRole="text"
          numberOfLines={1}
          style={
            {
              "color": "#6a737d",
              "fontFamily": "Euclid Circular B",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          Updated 1 sec ago
        </Text>
        <View
          style={
            {
              "alignSelf": "flex-start",
              "backgroundColor": "#ffffff",
              "borderColor": "#bbc0c5",
              "borderRadius": 10,
              "borderWidth": 1,
              "height": 24,
              "justifyContent": "center",
              "marginTop": 4,
              "paddingHorizontal": 4,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#141618",
                "fontFamily": "Euclid Circular B",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            Imported
          </Text>
        </View>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;
